# pocket-server

./: .gitignore  ASSUMED_BREACH_THREAT_MODEL.md  BACKLOG.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  USER_STORY_ANALYSIS.md  build-all-targets.sh
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/cochranblock/pocketserver/: BootReceiver.java  DashboardActivity.java  PocketServer.java  ServerService.java
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: styles.xml
ci/: build.sh
docs/: book.toml  compression_map.md
docs/src/: SUMMARY.md  compression_map.md  introduction.md  operator-setup.md  stripe-device-matrix.md
docs/templates/: menu.html
govdocs/: capability.md  security.md
ios/: build-ios.sh
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/PocketServer/: AppDelegate.swift  Info.plist
src/: android.rs  govdocs.rs  ios.rs  lib.rs  main.rs  pwa.rs  server.rs  stats.rs  tunnel.rs
