# Unlicense — cochranblock.org
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6

[package]
name = "pocket-server"
version = "0.1.0"
edition = "2024"
description = "Your website lives on your phone. No hosting bill. Ever."
license = "Unlicense"
repository = "https://github.com/cochranblock/pocket-server"
documentation = "https://cochranblock.github.io/pocket-server/"
homepage = "https://cochranblock.org"
keywords = ["web-server", "android", "static-site", "self-hosted", "phone"]
categories = ["web-programming::http-server", "command-line-utilities"]

[lib]
name = "pocket_server"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "pocket-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "fs", "signal"] }
tower-http = { version = "0.5", features = ["compression-zstd", "fs"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.diamond]
inherits = "release"
opt-level = 3              # maximum LLVM speed optimizations
lto = "fat"                # cross-crate inlining, full monomorphized dedup
codegen-units = 1          # one crystal, no fracture planes
strip = true               # symbols don't run, they just ride along
panic = "abort"            # cull unwinding machinery (-50-300 KB)
overflow-checks = false    # trust the arithmetic, check explicitly when needed
debug = false              # DWARF is heavy
incremental = false        # incremental caches are fracture planes
split-debuginfo = "off"    # no separate .dSYM or .pdb
